<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ServIntello</string>
    <string name="nos_services_sont_les_suivants">Nos services sont les suivants :</string>
    <string name="formations_pratiques">- Formations pratiques</string>
    <string name="coaching_m_moire">- Coaching Mémoire</string>
    <string name="compl_ment_de_comp_tences">- Complément de compétences</string>
    <string name="informatique_pour_tous">- Informatique pour tous</string>
    <string name="autres_prestations_intellectuelles">- Autres prestations intellectuelles</string>
    <string name="new_cell_2"> -> </string>
    <string name="nos_formations">Nos Formations</string>
    <string name="nos_coaching">Nos Coaching</string>
    <string name="title_activity_ipt">IptActivity</string>
    <string name="title_activity_autre_pi">AutrePiActivity</string>
    <string name="nos_comp_tences">Nos Compétences</string>
    <string name="d_tectons_ensemble_vos_comp_tences_compl_mentaires">Détectons ensemble vos compétences complémentaires</string>
    <string name="informatique_pour_tous_n_consultez_la_listes_n_ci_dessous">INFORMATIQUE POUR TOUS : \nConsultez la listes\nci dessous</string>
    <string name="autres_activit_s">Autres activités</string>
    <string name="retour">Retour</string>
    <string name="notre_expertise_votre_expansion_n_copyright_2cs_2024">Notre Expertise - Votre Expansion\nCopyright@2CS-2024</string>
    <string name="comp_tences">Compétences</string>
    <string name="informatique_et_tic">Informatique et TIC</string>
    <string name="autres_prestations_intello">Autres prestations intello</string>
    <string name="cr_er_un_compte">Créer Un Compte</string>

    <string name="besoin_service">Besoin d\'un service\nintellectuel</string>
    <string name="autres_prestations">- Autres prestations intellos</string>
    <string name="complement_prestations">- Complément de compétences</string>

    <string name="informatique_pour_enfants"><![CDATA[<b>1- Informatique Pour Enfants</b> : <br>Dénommée <font color="#FF0000"><strong>"Génie Africain (GA)"</strong></font> en informatique, elle ne concerne que les enfants du niveau des écoles primaires.<br>Pour plus d\'infos, <em>Cliquez ici.</em>]]></string>

    <string name="informatique_pour_adolescents"><![CDATA[<b>2- Informatique Pour Jeunes</b> : <br>Est consacrée aux jeunes enfants et Adolescents dont le niveau est équivalent à celui du secondaire.<br>Pour plus d\'infos, <em>Cliquez ici.</em>]]></string>

    <string name="informatique_pour_adultes_et_professionnels"><![CDATA[<b>3- Informatique Pour Adultes et Pro.</b> : <br>Elle est réservée adultes, universitaires et professionnels. Aucun pré-requis n\'est exigé pour toutes nos formations. <br>Pour plus d\'infos, <em>Cliquez ici.</em>]]></string>

    <string name="faso_learning_code"><![CDATA[<font color="#FF0000"><strong>Nouveau :</strong></font><br> <b><font color="#000080">4- Faso Learning Code (FLC)</font></b> : <br>Une Informatique Pour Tous, pour Tout le monde, pour toutes les couches de la société, et pour tous les âges. Personne n\'est délaissée.<br><b><font color="#FF0000">Lancement Officiel : Très Bientôt.</font></b><br>Pour plus d\'infos, <em>Cliquez ici.</em>]]></string>
    <string name="coaching">- Coaching</string>
    <string name="formation_g_nie_africain">Formation \nGENIE AFRICAIN</string>
    <string name="ic_ne_de_flc">Icône de FLC</string>
    <string name="connexion">Connexion</string>
    <string name="faso_learning_code_flc">Faso Learning\nCode (FLC)</string>
    <string name="informatique_pour_les_adultes_et_les_professionnels">Informatique Pour Les Adultes et Les Professionnels</string>
    <string name="informatique_pour_les_jeunes_adolescents">Informatique Pour Les Jeunes Adolescents</string>
    <string name="nous_sommes_l_pour_vous_servir_vous_n_tes_pas_perdus">Nous sommes là pour vous servir. Vous n\'êtes pas perdus</string>
    <string name="entete_form_inscription_ga">Vous pouvez inscrire votre enfant, en remplissant simplement ce formulaire en moins de 2 minutes.</string>
    <string name="nom_du_p_re">Nom du père</string>
    <string name="nom_de_la_m_re">Nom de la mère</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="email">Email</string>
    <string name="nom_de_l_enfant">Nom de l\'enfant</string>
    <string name="ge_de_l_enfant">Âge de l\'enfant</string>
    <string name="l_enfant_souffre_t_il_d_une_maladie">L\'enfant souffre-t-il d\'une maladie ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="description_de_la_maladie">Donnez une brève description de cette maladie</string>
    <string name="envoyer">Envoyer</string>
    <string name="inscrivez_votre_enfant">INSCRIVEZ VOTRE ENFANT</string>
    <string name="paiement_par_orange_money">Paiement par \nOrange Money</string>
    <string name="paiement_mobile">Paiement Mobile</string>
    <string name="quel_r_seau_mobile_voulez_vous_utiliser_pour_effectuer_le_paiement">Quel Réseau Mobile voulez-vous utiliser pour effectuer le paiement ?</string>
    <string name="orange_money">Orange Money</string>
    <string name="moov_money">Moov Money</string>
    <string name="montant_mensuel_n25_000_fcfa_enfant">Montant mensuel :\n25.000 FCFA / enfant</string>
    <string name="numero_de_telephone">Numéro de téléphone</string>
    <string name="orange_of_money">Orange Money</string>
    <string name="autre_moyen_de_paiement">Autre moyen de paiement</string>
    <string name="code_pin">Code PIN</string>

    <!-- Other strings -->
    <string-array name="classes_array">
        <item>Choisir sa classe</item>
        <item tools:ignore="Typos">CP1</item>
        <item>CP2</item>
        <item tools:ignore="Typos">CE1</item>
        <item>CE2</item>
        <item tools:ignore="Typos">CM1</item>
        <item>CM2</item>
    </string-array>

    <!-- Other strings -->
    <string-array name="age_array">
        <item>Choisir son âge</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>