<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/besoin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/amaranth"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:text="@string/besoin_service"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/soft"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/soft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/softxl150"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/tlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/besoin" />

        <TableLayout
            android:id="@+id/tlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/soft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pied_de_page">

            <TableRow
                android:id="@+id/newRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BlueOf2cs">

                <TextView
                    android:id="@+id/newCell1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/BlueOf2cs"
                    android:fontFamily="@font/actor"
                    android:padding="8dp"
                    android:text="@string/nos_services_sont_les_suivants"
                    android:textColor="@color/bleu_claire"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newCell2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Repeat the following TableRow blocks for each row -->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bleu_claire">

                <TextView
                    android:id="@+id/formations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/andika"
                    android:minHeight="48dp"
                    android:paddingStart="30dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="0dp"
                    android:text="@string/formations_pratiques"
                    android:textColor="@color/BlueOf2cs"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/f1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Orange_deteint">

                <TextView
                    android:id="@+id/coaching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/andika"
                    android:minHeight="48dp"
                    android:paddingStart="30dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="0dp"
                    android:text="@string/coaching"
                    android:textColor="@color/BlueOf2cs"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/f2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bleu_claire">

                <TextView
                    android:id="@+id/competences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/andika"
                    android:minHeight="48dp"
                    android:paddingStart="30dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="0dp"
                    android:text="@string/complement_prestations"
                    android:textColor="@color/BlueOf2cs"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/f3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Orange_deteint">

                <TextView
                    android:id="@+id/ipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/andika"
                    android:minHeight="48dp"
                    android:paddingStart="30dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="0dp"
                    android:text="@string/informatique_pour_tous"
                    android:textColor="@color/BlueOf2cs"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bleu_claire">

                <TextView
                    android:id="@+id/autres_pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/andika"
                    android:minHeight="48dp"
                    android:paddingStart="30dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="0dp"
                    android:text="@string/autres_prestations"
                    android:textColor="@color/BlueOf2cs"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/f5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/compte"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_corner"
                        android:fontFamily="@font/andika"
                        android:text="@string/cr_er_un_compte"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <Button
                        android:id="@+id/newsletter"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_corner"
                        android:fontFamily="@font/andika"
                        android:text="@string/connexion"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>
            </TableRow>


            <!-- Add other rows similarly -->

        </TableLayout>

        <TextView
            android:id="@+id/pied_de_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_rounded_corners"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:paddingTop="7dp"
            android:layout_marginTop="-50dp"
            android:text="@string/notre_expertise_votre_expansion_n_copyright_2cs_2024"
            android:textColor="@color/Orange_deteint"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
