<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/training"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/amaranth"
            android:height="100dp"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:textColor="@color/Orange_deteint"
            android:paddingStart="0dp"
            android:paddingTop="20dp"
            android:text="@string/nos_formations"
            android:textSize="35sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ipe"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/ipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/andika"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:background="@color/bleu_claire"
            android:text="@string/informatique_pour_enfants"
            android:textColor="@color/BlueOf2cs"
            android:textSize="13sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/ga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/training" />

        <TextView
            android:id="@+id/ga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gaxl150"
            android:minHeight="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/ipado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ipe" />

        <TextView
            android:id="@+id/ipado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/andika"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/informatique_pour_adolescents"
            android:background="@color/bleu_claire"
            android:textColor="@color/BlueOf2cs"
            android:textSize="13sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/ipadupro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ga" />

        <TextView
            android:id="@+id/ipadupro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/andika"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/informatique_pour_adultes_et_professionnels"
            android:background="@color/bleu_claire"
            android:textColor="@color/BlueOf2cs"
            android:textSize="13sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/ipadupro_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ipado" />

        <TextView
            android:id="@+id/ipadupro_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ipproxl150"
            android:minHeight="48dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/flc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ipadupro" />

        <TextView
            android:id="@+id/flc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/andika"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/faso_learning_code"
            android:background="@color/bleu_claire"
            android:textColor="@color/BlueOf2cs"
            android:textSize="13sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/retour1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ipadupro_img" />

        <Button
            android:id="@+id/retour1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/bouton_Secondary"
            android:textColor="@color/white"
            android:text="@string/retour"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/flc"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>